resources/css/index.css
/* Main page defaults */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
}

.container {
  overflow: hidden;
  background-color: var(--blue);
  min-width: 275px;
  max-width: 1024px;
  margin: 0 auto;
}

/* CSS Variables */
:root {
  --purple: #6903bf;
  --blue: #0224bf;
  --white: #eee;
  --lightgray: #efefef;
  --dark: #0c1235;
  --link: #8704f3;
}

/* Nav Section */
.nav {
  background-color: var(--purple);
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
}

.nav ul {
  display: flex;
  justify-content: flex-end;
}

.nav li {
  text-decoration: none;
  list-style: none;
  padding: 0.2rem 0.8rem;
  text-align: center;
  margin: 0.6rem 1rem;
  background-color: var(--link);
  color: var(--white);
}

.nav a {
  color: var(--white);
  text-decoration: none;
}

.nav a:hover {
  color: var(--purple);
  background-color: var(--white);
}

/* Header Section */
.header {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 1rem;
  /* height: 26rem; */
  background-image: linear-gradient(
    175deg,
    var(--purple),
    var(--purple),
    var(--blue)
  );
  min-width: 320px;
}

.title {
  grid-area: title;
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
  padding: 0 6rem 0 6rem;
  color: var(--white);
  font-size: 6rem;
}

.tagline {
  grid-area: tagline;
  padding: 0 6rem 0 6rem;
  color: #dddddd;
  font-size: 1.3rem;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
}

.logo {
  display: flex;
  justify-content: center;
  align-items: center;
  grid-area: logo;
  /* height: 100%;
  width: 0 auto; */
  padding: 0rem;
}

.logo img {
  height: 24rem;
  width: 0 auto;
}

/* Hero Section */
.hero {
  padding: 2rem 0 1rem 0;
  margin: 2rem 2rem;

  background-color: #0529c9;
}

.herotext {
  margin: 0 4rem;
  padding: 0 0 1rem 0;
  font-size: 1.4rem;
  color: var(--lightgray);
  line-height: 1.8rem;
}

/* Discipline Section */
.disciplines {
  margin: 2rem auto;
  padding: 4rem 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--lightgray);
}

.cards {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  max-width: 1024px;
}

.card {
  margin: 0rem 0.7rem 2rem 0.7rem;
  border: 0.001rem solid var(--dark);
  min-width: 250px;
  max-width: 380px;
}

.discipline {
  background-color: var(--blue);
}

.discipline .image {
  background-image: url(../../resources/images/head.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 100%;
  height: 14rem;
  padding: 3rem 2rem;
}

.card:nth-of-type(1) .image {
  background-image: url(../../resources/images/compassion.jpg);
}

.card:nth-of-type(2) .image {
  background-image: url(../../resources/images/love2.jpg);
}

.card:nth-of-type(3) .image {
  background-image: url(../../resources/images/love1.jpg);
}

.discipline h1 {
  background-color: #fff;
  color: var(--blue);
  padding: 2.5rem 1.5rem 0.75rem 1.5rem;
  font-size: 2rem;
}

.discipline h4 {
  background-color: #fff;
  color: var(--dark);
  padding: 0 1.5rem 3rem 1.5rem;
}

/* Footer Section */
.footer {
  background-image: linear-gradient(
    358deg,
    var(--purple),
    var(--purple),
    var(--blue)
  );
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  padding-bottom: 2rem;
}

.creditsection {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.footer .logos {
  list-style: none;
  display: flex;
  flex-direction: row;
  background-color: #fff;
  padding: 1rem;
  margin: 1px;
}

.footerlogo img {
  height: 4rem;
  width: 0 auto;
}

.footer .copyright {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1rem;
  color: var(--white);
}

/* Media queries */
@media screen and (max-width: 800px) {
  .header {
    flex-direction: column;
    justify-content: space-around;
  }

  .logo img {
    height: 40vh;
    width: 0 auto;
  }

  .cards {
    flex-direction: column;
  }

  .footer {
    flex-direction: column;
  }

  .nav ul {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .nav-link {
    background-color: #8704f3;
    display: block;
    width: 90%;
    margin: 0 auto;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .disciplines {
    padding: 0;
  }

  .title,
  .tagline {
    padding: 0 2rem;
  }

  .hero {
    padding: 1rem 0 0.2rem 0;
    margin: 2rem 1rem;
    background-color: #0530ec;
  }

  .herotext {
    margin: 0 1rem;
    padding: 0 0 0.8rem 0;
    font-size: 1rem;
    line-height: 1.4rem;
  }
}

